restyled home to avoid uneven columns

--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,8 @@
   display: flex;
   width: 80%;
   height: fit-content;
-  border-bottom: solid 3px rgb(255, 236, 54);
 
-  padding: 0 60px 40px 60px;
+  padding: 0 60px 20px 60px;
 
   justify-content: space-evenly;
   margin: 70px auto 20px auto;
@@ -24,6 +23,12 @@
   flex: 0.5;
 }
 
+.app__line {
+  border-right: solid 3px rgb(255,236,54);
+  margin-right: 20px;
+
+}
+
 .app__right {
   top: 50px;
   padding: 7px;
@@ -33,11 +38,8 @@
   display: flex;
   flex-direction: column;
   border-radius: 4px;
-  border: 1px solid lightgray;
   margin-top: 15px;
-  -webkit-box-shadow: 3px -2px 15px -8px #919191;
-  -moz-box-shadow: 3px -2px 15px -8px #919191;
-  box-shadow: 3px -2px 15px -8px #919191;
+
 }
 
 .backgroundimage {
