--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,6 @@
 
 body {
 /*background-image: linear-gradient(to bottom ,white , lightgray);*/
-background-color: rgb(250,250,250);
+background-color: white;
 }
 
